<resources>
    <string name="app_name">Family Map</string>
    <string name="personActivityLabel">Family Map: Person Details</string>
    <string name="settingsActivityLabel">Family Map: Settings</string>
    <string name="filterActivityLabel">Family Map: Filter</string>
    <string name="searchActivityLabel">Family Map: Search</string>
    <string name="serverHostInput">Server Host:</string>
    <string name="signInButton">SIGN IN</string>
    <string name="registerButton">REGISTER</string>
    <string name="serverPortInput">Server Port:</string>
    <string name="userNameInput">User Name:</string>
    <string name="passwordInput">Password:</string>
    <string name="firstNameInput">First Name:</string>
    <string name="lastNameInput">Last Name:</string>
    <string name="emailInput">Email:</string>
    <string name="maleRadioButton">Male</string>
    <string name="femaleRadioButton">Female</string>
    <string name="genderInput">Gender:</string>
    <string name="loginSuccessMessage"> Logged In!</string>
    <string name="registerSuccessMessage"> Registered and Logged In!</string>
    <string name="loginFailedMessage">Login Failed</string>
    <string name="registerFailedMessage">Registration Failed</string>
    <string name="title_activity_maps">Map</string>

    <string name="mapFragMessage">Select a Marker</string>
    <string name="settingsLifeStory">Life Story Lines</string>
    <string name="settingsFamilyTree">Family Tree Lines</string>
    <string name="settingsSpouse">Spouse Lines</string>
    <string name="settingsMapType">Map Type</string>
    <string name="settingsResync">Re-sync Data</string>
    <string name="settingsLogout">Logout</string>
    <string name="drawLinesErrorMessage">Unable to draw Event lines due to error</string>
    <string name="resyncData">Re-sync Data</string>
    <string name="logoutText">Logout: Return to Login Screen</string>
    <string name="resyncFailed">Re-sync Failed! Please log in again</string>
    <string name="resyncSuccess">Data synced!</string>
    <string name="settingButtonTitle">Settings</string>
    <string name="filterButtonTitle">Filter</string>
    <string name="searchButtonTitle">Search</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="personActPersonTitle">FAMILY</string>
    <string name="personActEventTitle">LIFE EVENTS</string>

</resources>
