<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LoginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/LoginLayout"
        android:layout_width="match_parent"
        android:layout_height="599dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center|clip_vertical|fill_vertical"
        android:orientation="vertical">


        <TableLayout
            android:id="@+id/DataInputTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:id="@+id/ServerHostInputRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ServerHostPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serverHostInput"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:translationY="10dp"
                    android:typeface="normal"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/ServerHostInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:id="@+id/ServerPortInputRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/ServerPortPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serverPortInput"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:translationY="10dp"
                    android:typeface="normal" />

                <EditText
                    android:id="@+id/ServerPortInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:id="@+id/UserNameInputRow"
                android:layout_width="match_parent"
                android:layout_height="144dp">

                <TextView
                    android:id="@+id/UserNamePrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userNameInput"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:translationY="10dp"
                    android:typeface="normal" />

                <EditText
                    android:id="@+id/UserNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:id="@+id/PasswordInputRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/PasswordPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passwordInput"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:translationY="10dp"
                    android:typeface="normal" />

                <EditText
                    android:id="@+id/PasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:id="@+id/FirstNameInputRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/FirstNamePrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstNameInput"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:translationY="10dp"
                    android:typeface="normal" />

                <EditText
                    android:id="@+id/FirstNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </TableRow>

            <TableRow
                android:id="@+id/LastNameInputRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/LastNamePrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lastNameInput"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:translationY="10dp"
                    android:typeface="normal" />

                <EditText
                    android:id="@+id/LastNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:id="@+id/EmailInputRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/EmailPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emailInput"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/EmailInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <TableRow
                android:id="@+id/GenderInputRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/GenderPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genderInput"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:typeface="normal" />


                <RadioGroup
                    android:id="@+id/genders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/maleRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:checked="true"
                        android:clickable="true"
                        android:focusable="auto"
                        android:text="@string/maleRadioButton" />

                    <RadioButton
                        android:id="@+id/femaleRadioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="auto"
                        android:text="@string/femaleRadioButton" />
                </RadioGroup>


            </TableRow>


        </TableLayout>

        <LinearLayout
            android:id="@+id/SignRegisterLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:translationY="25dp">

            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signInButton" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerButton" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>