<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/LifeStoryLinesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsLifeStory"
                android:textSize="24sp" />


            <Spinner
                android:id="@+id/SpinnerLifeStory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <Switch
                android:id="@+id/ShowLifeStory"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorPrimary" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/FamilyLinesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsFamilyTree"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/SpinnerFamilyLines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/ShowFamilyLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorPrimary" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsSpouse"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/SpinnerSpouseLines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/ShowSpouseLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorPrimary" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsMapType"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/SpinnerMapType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/syncDataView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/resyncData"
        android:textAlignment="center"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/logoutView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/logoutText"
        android:textAlignment="center"
        android:textSize="24sp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorPrimary" />

</LinearLayout>
